--- a/css/style.css
+++ b/css/style.css
@@ -6,19 +6,30 @@ html{
 }
 
 input{
-    padding: 0.5rem 1rem;
+    padding: 0.63rem 1rem;
+    border-top-right-radius: none;
+    border-bottom-right-radius: none;
 }
 button{
+    
     padding: 0.75rem 1rem;
     color: white;
-    border-radius: 3rem;
-    border: 0;
+    border: none;
 }
 
 .addBtn{
+    margin-left: -5px;
+    border-top-left-radius: none;
+    border-bottom-left-radius: none;
+    border-bottom-right-radius: 2rem;
+    border-top-right-radius: 2rem;
     background-color: blue;
 }
 
 .removeBtn{
+    border-radius: 3rem;
     background-color: red;
+}
+li:hover{
+cursor: pointer;
 }
